disable transparent huge pages; use deadline scheduler in boot parms

--- a/packer_templates/centos/http/7/ks.cfg
+++ b/packer_templates/centos/http/7/ks.cfg
@@ -8,12 +8,14 @@ firewall --disabled
 selinux --permissive
 timezone UTC
 unsupported_hardware
-bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0"
+bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0 transparent_hugepage=never elevator=deadline"
 text
 skipx
 zerombr
 clearpart --all --initlabel
-autopart --nohome --nolvm
+part /boot --fstype="ext4" --size=1024
+part swap --fstype="swap" --size=10240
+part / --fstype="ext4" --grow --size=1
 auth --enableshadow --passalgo=sha512 --kickstart
 firstboot --disabled
 reboot --eject
