--- a/packer_templates/centos/http/8/ks.cfg
+++ b/packer_templates/centos/http/8/ks.cfg
@@ -7,12 +7,15 @@ rootpw --plaintext vagrant
 firewall --disabled
 selinux --permissive
 timezone UTC
-bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0"
+bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0 transparent_hugepage=never elevator=deadline"
 text
 skipx
 zerombr
 clearpart --all --initlabel
-autopart --nohome --nolvm --noboot
+part /boot --fstype="ext4" --size=1024
+part swap --fstype="swap" --size=10240
+part / --fstype="ext4" --grow --size=1
+
 firstboot --disabled
 reboot --eject
 user --name=vagrant --plaintext --password vagrant
