--- a/packer_templates/centos/http/7/ks.cfg
+++ b/packer_templates/centos/http/7/ks.cfg
@@ -6,7 +6,7 @@ network --bootproto=dhcp --noipv6 --onboot=on --device=eth0
 rootpw --plaintext vagrant
 firewall --disabled
 selinux --permissive
-timezone UTC
+timezone America/New_York
 unsupported_hardware
 bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0 transparent_hugepage=never elevator=deadline"
 text
