Working rhel-6 setup

--- a/packer_templates/centos/http/6/ks.cfg
+++ b/packer_templates/centos/http/6/ks.cfg
@@ -6,14 +6,16 @@ network --bootproto=dhcp --onboot=on --device=eth0
 rootpw --plaintext vagrant
 firewall --disabled
 selinux --permissive
-timezone UTC
+timezone America/New_York
 unsupported_hardware
 bootloader --timeout=1 --location=mbr --append="net.ifnames=0 biosdevname=0"
 text
 skipx
 zerombr
 clearpart --all --initlabel
-autopart
+part /boot --fstype="ext4" --size=1024
+part swap --fstype="swap" --size=10240
+part / --fstype="ext4" --grow --size=1
 auth --enableshadow --passalgo=sha512 --kickstart
 firstboot --disabled
 reboot --eject
@@ -26,6 +28,9 @@ openssh-clients
 sudo
 wget
 nfs-utils
+net-tools
+tar
+bzip2
 virt-what
 rsync
 -fprintd-pam
